# fast-psnr

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindITT.cmake  dependencies.cmake  helper.cmake  options.cmake  policies.cmake
src/include/: psnr.hpp
src/include/psnr/: concepts.hpp  impl.hpp  io.hpp
src/include/psnr/common/: cmake.h.in  defines.h
src/include/psnr/concepts/: mse.hpp
src/include/psnr/helper/: static_math.hpp
src/include/psnr/helper/constexpr/: math.hpp
src/include/psnr/impl/: ffmpeg.hpp  mse.hpp  my.native.hpp  native.hpp  psnr.hpp  v1.hpp
src/include/psnr/impl/mse/: v1.hpp  v2.hpp  v3.hpp  v4.hpp  v5.hpp
src/include/psnr/io/: yuv.hpp
src/lib/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  minicase-v1.cpp  minicase-v2.cpp  minicase-v3.cpp  minicase-v4.cpp  minicase-v5.cpp
